coordinates() via lightweight raw parse; toString(); IList at remaining class borders; @SuppressWarnings
coordinates(): no longer triggers the effective-model build (real Maven
invocation, temp file, potentially the network). Reads this project's
own raw text once (RawPom, extracted from RawVersionDeclarations for
reuse): artifactId is always stated directly; groupId/version, if this
project's own text omits them, are read from its own <parent> element's
literal groupId/version, which Maven requires to already match the real
parent's coordinates - no fetch of the parent's own pom needed. Only
fails loudly (existing notYetImplemented pattern) when even that isn't
available: no parent, or the parent's own version itself omitted via
relativePath (MNG-624). Meaningful perf win, not just style:
VersionDeclarationsReader's doneProjects map is keyed by coordinates(),
called for every project visited - now cheap instead of triggering a
full model build just to check a map key.

toString() on LazyProject delegates to coordinates().toString().

IList/ISet at the remaining internal class borders that were still
plain java.util.List: BridgingModelResolver's constructor and new
repositories() accessor, PomFetcher's repository-aware overload
(including its two private helpers, for consistency within one small
file), LazyProject's seedRepositories field and EffectiveBuild record.
The one deliberately-unchanged exception: BridgingModelResolver's
private, internal repositories field stays a mutable ArrayList - that
mutability is inherent to what the class is, required by ModelResolver's
own addRepository(...) contract, not something to paper over.

@SuppressWarnings("deprecation") // see comment added to the three
resolveModel(...) overrides that must return the deprecated ModelSource
(ModelResolver's own interface declares it, not something this class
controls) - the existing explanatory comment above them is what "see
comment" points at.

Not run/verified by me - no Maven availabl